package com.recycling.strategies;

import com.recycling.domain.Product;

public class SimpleImpactStrategy implements ImpactCalculationStrategy {
    @Override
    public double calculate(Product product) {
        // TODO: Week 5 - implement calculation logic
        return 0.0;
    }
}